using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_IDLE2 = "Idle2";
    public const string ANIM_RUN = "Run";
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_CROUCH = "Crouch";
    public const string ANIM_JUMP = "Jump";
    public const string ANIM_FALL = "Fall";
    public const string ANIM_SLIDE = "Slide";    
    public const string ANIM_SOMERSAULT = "Somersault";
    public const string ANIM_DIE = "Die";
    public const string ANIM_ULTI = "Ulti";
    public const string ANIM_SHOOT = "Shoot";
    public const string ANIM_PATROL = "Patrol";

    public const string PLAYER = "Player";
    public const string ENEMY = "Enemy";
    public const string ENEMY_WALL = "EnemyWall";
}
